--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,23 @@
 	  <%= render 'layouts/shim' %>
 	</head>
 	<body>
+		<% ## Header ## %>
 		<%= render 'layouts/header' %>
+		
 		<div class="container">
+			
+			<% ## Alerts & Errors ## %>
 			<% flash.each do |key, value| %>
-				<div class="alert alert-<%= key %>"><%= value %></div>
+				<%= content_tag(:div, value, class: "alert alert-#{key}") %>
 			<% end %>
+			
+			<% ## Main Content ## %>
 			<%= yield %>
+			
+			<% ## Footer ## %>
 			<%= render 'layouts/footer' %>
+			
+			<% ## Debug Details ## %>
 			<%= debug(params) if Rails.env.development? %>
 		</div>
 	</body>
